チーム分けツールとペア決めツールのマージ

--- a/grouping/index.html
+++ b/grouping/index.html
@@ -15,7 +15,7 @@
 
         <div class="block">
             <h3>このチーム分けツールは・・・</h3>
-            <div class="indent"><p>スポーツなどの「強さ」が平均的になるようにチーム分けを行うツールです。<br>さらに、「性別」や「学年」も平均的になるように条件を追加することもできます。</p></div>
+            <div class="indent"><p>「強さ(数値)」が平均的になるようにチーム分けを行うツール。<br>「性別」と「学年」を平均化の要素に追加可能。</p></div>
         </div>
 
         <div class="block">
@@ -23,14 +23,14 @@
             <ol>
                 <li>
                     <div class="container2">
-                        <div>テンプレートファイル(<a href="example.csv">example.csv</a>)にデータを入力してファイルをアップロードしてください。</div>
+                        <div>テンプレートファイル(<a href="example.csv">example.csv</a>)にデータを入力してファイルをアップロード</div>
                         <input type="file" id="csvfile" class="item2">
                     </div>
                 </li>
 
                 <li>
                     <div class="container2">
-                        <div>チーム数を選択してください。</div>
+                        <div>チーム数</div>
                         <div class="item2">
                             <select name="num" id="teamnum">
                                 <option value="">-</option>
@@ -46,7 +46,7 @@
 
                 <li>
                     <div class="container2">
-                        <div>平均的にする条件を選択してください。</div>
+                        <div>追加要素</div>
                         <div class="item2 container3">
                             <div><input type="checkbox" id="gen">性別</div>
                             <div class="item3"><input type="checkbox" id="gre">学年</div>
