--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="バド同関連ツール">
+    <meta name="description" content="バド同ツール">
     <link rel="stylesheet" href="css/style.css">
-    <title>バド同関連ツール</title>
+    <title>バド同ツール</title>
 </head>
 
 <body>
-    <h1 class="title">バド同関連ツール</h1>
-    <h2><a href=grouping/index.html>チーム分け</a></h2>
-    <h2></h2>
+    <h1 class="title">バド同ツール</h1>
+    <div class="content">
+        <h3><a href=grouping/index.html>チーム分け</a></h3>
+        <h3><a>ペア決め</a></h3>
+    </div>
     
 </body>
 
