--- a/grouping/index.html
+++ b/grouping/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="データと条件を入力すると自動的にチーム分けを行ってくれるツールです。">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>チーム分け</title>
 </head>
 
