--- a/grouping/index.html
+++ b/grouping/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="データと条件を入力すると自動的にチーム分けを行ってくれるツールです。">
+    <meta name="description" content="データと条件を入力すると自動的にチーム分けを行うツール">
     <link rel="stylesheet" href="../css/style.css">
     <title>チーム分け</title>
 </head>
