--- a/grouping/index.html
+++ b/grouping/index.html
@@ -14,8 +14,11 @@
     <div class="content">
 
         <div class="block">
-            <h3>このチーム分けツールは・・・</h3>
-            <div class="indent"><p>「強さ(数値)」が平均的になるようにチーム分けを行うツール。<br>「性別」と「学年」を平均化の要素に追加可能。</p></div>
+            <h3>このツールは・・・</h3>
+            <div class="indent">
+                <h4>「強さ(数値)」が平均的になるようにチーム分けを行うツール</h4>
+                <p>・「性別」と「学年」も均等にする条件に追加可能。</p>
+            </div>
         </div>
 
         <div class="block">
@@ -46,7 +49,7 @@
 
                 <li>
                     <div class="container2">
-                        <div>追加要素</div>
+                        <div>追加条件</div>
                         <div class="item2 container3">
                             <div><input type="checkbox" id="gen">性別</div>
                             <div class="item3"><input type="checkbox" id="gre">学年</div>
