--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h1 class="title">バド同ツール</h1>
     <div class="content">
         <h3><a href=grouping/index.html>チーム分け</a></h3>
-        <h3><a>ペア決め</a></h3>
+        <h3><a href=pairing/index.html>ペア決め</a></h3>
+        <h3><a href=round-robin/index.html>総当たり組み合わせ</a></h3>
     </div>
     
 </body>
