--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <h1 class="title">バド同ツール</h1>
+    <div class="title">
+        <div class="divlink">
+            <h1>バド同ツール</h1>
+            <a class="link" href=index.html></a>
+        </div>
+    </div>
     <div class="content">
         <h3><a href=grouping/index.html>チーム分け</a></h3>
         <h3><a href=pairing/index.html>ペア決め</a></h3>
