--- a/pairing/index.html
+++ b/pairing/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <h1 class="title">ペア決め</h1>
+    <div class="title">
+        <div class="divlink">
+            <h1>ペア決め</h1>
+            <a class="link" href=index.html></a>
+        </div>
+    </div>
     <div class="content">
 
         <div class="block">
